packages/dbml-core/src/parse/dbmlParser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

var _ = require("lodash"), pluralize = require("pluralize");

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { rules: peg$parserules },
      peg$startRuleFunction  = peg$parserules,

      peg$c0 = function() {
          return data;
        },
      peg$c1 = function(t) { data.tables.push(t) },
      peg$c2 = function(r) { data.refs.push(r) },
      peg$c3 = function(e) { data.enums.push(e) },
      peg$c4 = function(tg) { data.tableGroups.push(tg) },
      peg$c5 = "{",
      peg$c6 = peg$literalExpectation("{", false),
      peg$c7 = "}",
      peg$c8 = peg$literalExpectation("}", false),
      peg$c9 = function(name, body) {
        return {
          name: name,
          tableNames: body,
          token: location()
        }
      },
      peg$c10 = function(tables) {
        return tables.map(t => t[0]);
      },
      peg$c11 = function(r) { return r; },
      peg$c12 = function(name, body) {
            return {
              name: name? name[2] : null,
              endpoints: body,
              token: location()
            }
          },
      peg$c13 = ":",
      peg$c14 = peg$literalExpectation(":", false),
      peg$c15 = function(name, body) {
            return {
              name: name? name[1] : null,
              endpoints: body,
              token: location()
            }
          },
      peg$c16 = ".",
      peg$c17 = peg$literalExpectation(".", false),
      peg$c18 = function(table1, field1, relation, table2, field2) {
          const endpoints = [
            {
              tableName: table1,
              fieldName: field1,
              relation: relation === ">" ? "*" : "1",
              token: location()
            },
            {
              tableName: table2,
              fieldName: field2,
              relation: relation === "<" ? "*" : "1",
              token: location()
            }
          ];
          return endpoints;
        },
      peg$c19 = function(name, alias, c) {return c},
      peg$c20 = function(name, alias, headerColor, body) {
            let fields = body.fields || [];
            let indexes = body.indexes || [];
            headerColor = headerColor || '#316896'
            // Handle list of partial inline_refs
            let refs = []

            fields.forEach((field) => {
              (field.inline_refs || []).forEach((iref) => {
                const endpoints = [
                {
                  tableName: iref.tableName,
                  fieldName: iref.fieldName,
                  relation: iref.relation === "<" ? "*" : "1",
                  token: iref.token
                },
                {
                  tableName: name,
                  fieldName: field.name,
                  relation: iref.relation === ">" ? "*" : "1",
                  token: iref.token
                }];

                let ref = {
                  name: null, // no name
                  endpoints: endpoints,
                  token: iref.token
                }
                data.refs.push(ref);
              })
            });

            return {
              name: name,
              alias: alias,
              fields: fields,
              token: location(),
              indexes: indexes,
              headerColor: headerColor
            };
          },
      peg$c21 = function(fields, indexes) {

          return {fields: fields, indexes : indexes }},
      peg$c22 = function(name, type, constrains, field_settings) {
          const field = {
            name: name,
            type: type,
            token: location(),
            inline_refs: []
          }
          Object.assign(field, ...constrains.map(c => c[1]));
          Object.assign(field, field_settings);
          return field;
        },
      peg$c23 = function(name, body) {
          return {
            name: name,
            token: location(),
            values: body.enum_values
          };
        },
      peg$c24 = function(enum_values) {
          return { enum_values: enum_values }
        },
      peg$c25 = function(name, enum_setting) {
          const enum_value = {
            name: name,
            token: location(),
          }
          Object.assign(enum_value, enum_setting);
          return enum_value;
        },
      peg$c26 = "[",
      peg$c27 = peg$literalExpectation("[", false),
      peg$c28 = "]",
      peg$c29 = peg$literalExpectation("]", false),
      peg$c30 = function(v) {
          return {
            note: v
          };
         },
      peg$c31 = function(first, rest) {
          let arrSettings = [first].concat(rest.map(el => el[1]));
          let res = {
            inline_refs: [],
          };
          arrSettings.forEach((ele) => {
            if (typeof ele === 'string') {
              if (ele.toLowerCase() == "not null") {
                res.not_null = true;
              }
              if (ele.toLowerCase() == "null") {
                res.not_null = false;
              }
              if (ele.toLowerCase() == "primary key" || ele.toLowerCase() == 'pk') {
                res.pk = true;
              }
              if (ele.toLowerCase() == "unique") {
                res.unique = true;
              }
              if (ele.toLowerCase() == "increment") {
                res.increment = true;
              }
            } else {
              if (ele.type === "note") {
                res.note = ele.value;
              }
              if (ele.type === "ref_inline") {
                res.inline_refs.push(ele.value);
              }
              if (ele.type === "default") {
                res.dbdefault = ele.value;
              }
            }
          });
          return res;
        },
      peg$c32 = "not null",
      peg$c33 = peg$literalExpectation("not null", true),
      peg$c34 = function(a) { return a },
      peg$c35 = "null",
      peg$c36 = peg$literalExpectation("null", true),
      peg$c37 = "primary key",
      peg$c38 = peg$literalExpectation("primary key", true),
      peg$c39 = "pk",
      peg$c40 = peg$literalExpectation("pk", true),
      peg$c41 = "unique",
      peg$c42 = peg$literalExpectation("unique", true),
      peg$c43 = "increment",
      peg$c44 = peg$literalExpectation("increment", false),
      peg$c45 = function(v) { return { type: 'note', value: v } },
      peg$c46 = function(v) { return { type: 'ref_inline', value: v } },
      peg$c47 = function(v) {return {type: 'default', value: v} },
      peg$c48 = function(first, rest) {
            let result= [first].concat(rest.map(el => el[2]));
            return result;
          },
      peg$c49 = function(syntax, index_settings) {
        	if (!Array.isArray(syntax)) {
          	syntax = [syntax];
          }
          
          const index = {
          	columns: syntax,
            token: location()
          };
          Object.assign(index, index_settings);
          return index;
       },
      peg$c50 = function(column) {
          const singleIndex = {
            value: column,
            type: 'column'
          }
          return singleIndex
        },
      peg$c51 = "`",
      peg$c52 = peg$literalExpectation("`", false),
      peg$c53 = /^[^`]/,
      peg$c54 = peg$classExpectation(["`"], true, false),
      peg$c55 = function(text) { return { value:  text.join(""), type: 'expression'} },
      peg$c56 = "(",
      peg$c57 = peg$literalExpectation("(", false),
      peg$c58 = ")",
      peg$c59 = peg$literalExpectation(")", false),
      peg$c60 = function(first, rest) {
         let arrIndex = [first].concat(rest.map(el => el[2]));
         return arrIndex;
      },
      peg$c61 = function(first, rest) {
          let arrSettings = [first].concat(rest.map(el => el[1]));
              let res = {};
          arrSettings.forEach((ele) => {
            if (typeof ele === 'string') {
              if (ele.toLowerCase() == "primary key" || ele.toLowerCase() == 'pk') {
                res.pk = true;
              }
              if (ele.toLowerCase() == "unique") {
                res.unique = true;
              }
            } else {
              if (ele.type === "name") {
                res.name = ele.value;
              }
              if (ele.type === "type") {
                res.type = ele.value;
              }
              if (ele.type === "default") {
                res.dbdefault = ele.value;
              }
            }
          });
          return res;
        },
      peg$c62 = function(v) { return { type: 'name', value: v } },
      peg$c63 = function(v) { return { type: 'type', value: v } },
      peg$c64 = "name:",
      peg$c65 = peg$literalExpectation("name:", true),
      peg$c66 = function(val) { return val.value },
      peg$c67 = "note:",
      peg$c68 = peg$literalExpectation("note:", true),
      peg$c69 = "type:",
      peg$c70 = peg$literalExpectation("type:", true),
      peg$c71 = function(val) { return val },
      peg$c72 = "ref:",
      peg$c73 = peg$literalExpectation("ref:", false),
      peg$c74 = function(relation, table2, field2) {
            return {
              tableName: table2,
              fieldName: field2,
              relation: relation,
              token: location(),
            }
        },
      peg$c75 = "default:",
      peg$c76 = peg$literalExpectation("default:", true),
      peg$c77 = function(val) {return val},
      peg$c78 = "as",
      peg$c79 = peg$literalExpectation("as", false),
      peg$c80 = function(alias) {
            return alias
          },
      peg$c81 = function(s, color) {return s + color.join('')},
      peg$c82 = peg$otherExpectation("table"),
      peg$c83 = "table",
      peg$c84 = peg$literalExpectation("table", true),
      peg$c85 = peg$literalExpectation("as", true),
      peg$c86 = peg$otherExpectation("references"),
      peg$c87 = "ref",
      peg$c88 = peg$literalExpectation("ref", true),
      peg$c89 = peg$otherExpectation("unique"),
      peg$c90 = function() { return {unique: true} },
      peg$c91 = peg$otherExpectation("PK"),
      peg$c92 = function() {return {pk: true}},
      peg$c93 = peg$otherExpectation("indexes"),
      peg$c94 = "indexes",
      peg$c95 = peg$literalExpectation("indexes", true),
      peg$c96 = peg$otherExpectation("btree"),
      peg$c97 = "btree",
      peg$c98 = peg$literalExpectation("btree", true),
      peg$c99 = peg$otherExpectation("hash"),
      peg$c100 = "hash",
      peg$c101 = peg$literalExpectation("hash", true),
      peg$c102 = peg$otherExpectation("enum"),
      peg$c103 = "enum",
      peg$c104 = peg$literalExpectation("enum", true),
      peg$c105 = "headercolor",
      peg$c106 = peg$literalExpectation("headercolor", true),
      peg$c107 = peg$otherExpectation("Table Group"),
      peg$c108 = "tablegroup",
      peg$c109 = peg$literalExpectation("TableGroup", true),
      peg$c110 = peg$otherExpectation(">, - or <"),
      peg$c111 = /^[>\-<]/,
      peg$c112 = peg$classExpectation([">", "-", "<"], false, false),
      peg$c113 = peg$otherExpectation("valid name"),
      peg$c114 = function(c) { return c.join("") },
      peg$c115 = /^[^"\n]/,
      peg$c116 = peg$classExpectation(["\"", "\n"], true, false),
      peg$c117 = peg$otherExpectation("type"),
      peg$c118 = function(c) { return c },
      peg$c119 = function(type_name, args) {
        args = args ? args[3] : null;

      	if (type_name.toLowerCase() !== 'enum') {
      		type_name = args ? type_name + '(' + args + ')' : type_name;
      	}
      	
      	return {
      		type_name,
      		args
      	}
      },
      peg$c120 = peg$otherExpectation("expression"),
      peg$c121 = function(factors) {
      	return _.flattenDeep(factors).join("");
      },
      peg$c122 = ",",
      peg$c123 = peg$literalExpectation(",", false),
      peg$c124 = ");",
      peg$c125 = peg$literalExpectation(");", false),
      peg$c126 = peg$anyExpectation(),
      peg$c127 = function(factors) {
          	return _.flattenDeep(factors).join("");
          },
      peg$c128 = /^[',.a-z0-9_+-`]/i,
      peg$c129 = peg$classExpectation(["'", ",", ".", ["a", "z"], ["0", "9"], "_", ["+", "`"]], false, true),
      peg$c130 = /^['.a-z0-9_+\-]/i,
      peg$c131 = peg$classExpectation(["'", ".", ["a", "z"], ["0", "9"], "_", "+", "-"], false, true),
      peg$c132 = function() {return text()},
      peg$c133 = peg$otherExpectation("letter, number or underscore"),
      peg$c134 = /^[a-z0-9_]/i,
      peg$c135 = peg$classExpectation([["a", "z"], ["0", "9"], "_"], false, true),
      peg$c136 = /^[0-9a-fA-F]/,
      peg$c137 = peg$classExpectation([["0", "9"], ["a", "f"], ["A", "F"]], false, false),
      peg$c138 = function(c) {return c.toLowerCase()},
      peg$c139 = "\"",
      peg$c140 = peg$literalExpectation("\"", false),
      peg$c141 = peg$otherExpectation("endline"),
      peg$c142 = "\t",
      peg$c143 = peg$literalExpectation("\t", false),
      peg$c144 = peg$otherExpectation("comment"),
      peg$c145 = "//",
      peg$c146 = peg$literalExpectation("//", false),
      peg$c147 = /^[^\n]/,
      peg$c148 = peg$classExpectation(["\n"], true, false),
      peg$c149 = peg$otherExpectation("newline"),
      peg$c150 = "\r\n",
      peg$c151 = peg$literalExpectation("\r\n", false),
      peg$c152 = "\n",
      peg$c153 = peg$literalExpectation("\n", false),
      peg$c154 = peg$otherExpectation("whitespace"),
      peg$c155 = /^[ \t\r\n\r]/,
      peg$c156 = peg$classExpectation([" ", "\t", "\r", "\n", "\r"], false, false),
      peg$c157 = /^[ \t\r\n\r"]/,
      peg$c158 = peg$classExpectation([" ", "\t", "\r", "\n", "\r", "\""], false, false),
      peg$c159 = " ",
      peg$c160 = peg$literalExpectation(" ", false),
      peg$c161 = "#",
      peg$c162 = peg$literalExpectation("#", false),
      peg$c163 = function() {return "#"},
      peg$c164 = peg$otherExpectation("string"),
      peg$c165 = function(chars) {
            return { value: chars.join(''), type: 'string' } ;
          },
      peg$c166 = "'",
      peg$c167 = peg$literalExpectation("'", false),
      peg$c168 = "\\",
      peg$c169 = peg$literalExpectation("\\", false),
      peg$c170 = function() { return '"'; },
      peg$c171 = function() { return text(); },
      peg$c172 = function() { return "'"; },
      peg$c173 = /^[0-9]/,
      peg$c174 = peg$classExpectation([["0", "9"]], false, false),
      peg$c175 = "=",
      peg$c176 = peg$literalExpectation("=", false),
      peg$c177 = "true",
      peg$c178 = peg$literalExpectation("true", true),
      peg$c179 = "false",
      peg$c180 = peg$literalExpectation("false", true),
      peg$c181 = function(boolean) {
        return {
          type: 'boolean',
          value: boolean
        };
      },
      peg$c182 = function(number) {
        return {
          type: 'number',
          value: number
        };
      },
      peg$c183 = function(left, right) { return parseFloat(left.join("") + "." +   right.join("")); },
      peg$c184 = function(digits) { return parseInt(digits.join(""), 10); },

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parserules() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseexpr();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseexpr();
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0();
    }
    s0 = s1;

    return s0;
  }

  function peg$parseexpr() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseTableSyntax();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c1(s1);
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseRefSyntax();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c2(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseEnumSyntax();
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c3(s1);
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseTableGroupSyntax();
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c4(s1);
          }
          s0 = s1;
          if (s0 === peg$FAILED) {
            s0 = peg$parse__();
          }
        }
      }
    }

    return s0;
  }

  function peg$parseTableGroupSyntax() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;
